--- a/index.css
+++ b/index.css
@@ -2,8 +2,7 @@
   box-sizing: border-box;
 }
 
-html,
-body {
+html, body {
   margin: 0;
   padding: 0;
   background-color: #FFF7ED;
@@ -17,6 +16,12 @@ body::-webkit-scrollbar {
 body {
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+
+.site-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -44,6 +49,22 @@ header a {
 header a:hover {
   color: #161616;
   text-decoration: underline;
+}
+
+main {
+  margin-bottom: 84px;
+}
+
+footer {
+  background-color: #161616;
+  color: #AAAAAA;
+  height: 74px;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  font-weight: 500;
 }
 
 .link-button {
@@ -198,18 +219,15 @@ header a:hover {
   color: #FFEAD0;
 }
 
-.van-type.simple:hover,
-.van-type.simple.selected {
+.van-type.simple:hover, .van-type.simple.selected {
   background-color: #E17654;
 }
 
-.van-type.rugged:hover,
-.van-type.rugged.selected {
+.van-type.rugged:hover, .van-type.rugged.selected {
   background-color: #115E59;
 }
 
-.van-type.luxury:hover,
-.van-type.luxury.selected {
+.van-type.luxury:hover, .van-type.luxury.selected {
   background-color: #161616;
 }
 
