added outletContext for passing data to child component

--- a/index.css
+++ b/index.css
@@ -2,7 +2,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   background-color: #FFF7ED;
@@ -80,10 +81,6 @@ footer {
   transition: transform .1s ease-in-out;
 }
 
-.link-button:hover {
-  transform: translate(1px, 1px);
-}
-
 .back-button {
   display: block;
   color: black;
@@ -94,6 +91,10 @@ footer {
 
 .back-button span:hover {
   text-decoration: underline;
+}
+
+.link-button:hover {
+  transform: translate(1px, 1px);
 }
 
 /*** HOME PAGE ***/
@@ -269,9 +270,7 @@ i[class*='van-type-'] {
   text-decoration: none;
 }
 
-/* .van-detail-container .back-button:visited {
-
-} */
+/* .van-detail-container .back-button:visited {} */
 
 .van-detail-container .back-button span {
   text-decoration: underline;
@@ -395,4 +394,30 @@ i[class*='van-type-'] {
 .host-van-detail-info-text>h4 {
   font-size: 20px;
   margin-block: 0;
+}
+
+.host-van-detail-nav {
+  display: flex;
+  margin-block: 25px;
+}
+
+.host-van-detail-nav a {
+  text-decoration: none;
+  color: #4D4D4D;
+  font-weight: 500;
+  padding: 5px 20px;
+}
+
+.host-van-detail-nav a:first-of-type {
+  text-decoration: none;
+  color: #4D4D4D;
+  font-weight: 500;
+  padding: 5px 15px;
+  margin-left: -15px;
+}
+
+.host-van-detail-nav a:hover {
+  color: #161616;
+  text-decoration: underline;
+  font-weight: 700;
 }
