--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ header a {
   text-decoration: none;
   color: #4d4d4d;
   font-weight: 600;
-  padding: 5px 20px;
+  padding: 5px 10px;
 }
 
 header a:hover {
@@ -204,6 +204,7 @@ footer {
 
 .van-list-filter-buttons {
   display: flex;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 
@@ -230,7 +231,7 @@ footer {
 }
 
 .van-list-container button {
-  margin-right: 20px;
+  margin: 0 5px;
   cursor: pointer;
 }
 
@@ -343,6 +344,7 @@ i[class*="van-type-"] {
 
 .host-nav {
   display: flex;
+  justify-content: center;
   margin-bottom: 30px;
 }
 
@@ -350,7 +352,7 @@ i[class*="van-type-"] {
   text-decoration: none;
   color: #4d4d4d;
   font-weight: 500;
-  padding: 5px 20px;
+  padding: 5px 12px;
 }
 
 .host-nav a:hover {
