--- a/index.css
+++ b/index.css
@@ -507,6 +507,7 @@ i[class*="van-type-"] {
 .login-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   max-width: 500px;
 }
@@ -518,6 +519,7 @@ i[class*="van-type-"] {
   font-family: "Inter", sans-serif;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   font-weight: 400;
+  width: 100%;
 }
 
 .login-form>input:focus {
@@ -542,6 +544,7 @@ i[class*="van-type-"] {
   color: white;
   font-family: "Inter", sans-serif;
   cursor: pointer;
+  width: 75%;
 }
 
 .login-form>button:disabled {
